SFDC Automation/src/objects/Ryder_Surveys__c.object
<CustomObject>
    <description>This object will store the high-level results of Click Tools surveys, including the CSI, Follow up and Closed Case Surveys.</description>
    <fields>
        <fullName>Activity_ID__c</fullName>
        <description>Activity ID associated to the task for the survey conducted by the agent</description>
        <inlineHelpText>Activity ID associated to the task for the survey conducted by the agent</inlineHelpText>
        <label>Activity ID</label>
        <length>22</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CS_Score__c</fullName>
        <description>Customer Satisfaction Score - calculated in the interim before CSI introduction</description>
        <label>CS Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Ryder Surveys</relationshipLabel>
        <relationshipName>Ryder_Surveys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conducted_Business_Review__c</fullName>
        <label>Conducted business review</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t Know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Ryder Surveys</relationshipLabel>
        <relationshipName>Ryder_Surveys1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Branch_Name_From_Survey__c</fullName>
        <label>Customer Branch Name From Survey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The customer/branch the survey corresponds.</description>
        <inlineHelpText>The customer/branch of the key contact that responded to this survey.</inlineHelpText>
        <label>Customer Branch</label>
        <referenceTo>Customer_Branch__c</referenceTo>
        <relationshipLabel>Ryder Surveys</relationshipLabel>
        <relationshipName>Ryder_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Sat_Acct_Mgr_Satisfaction__c</fullName>
        <description>As a result of taking the customer satisfaction survey, this is the ranking from 10 to 1 (10 being extremely satisfied and 1 being least satisfied) on the customer&apos;s satisfaction with their Account Manager.</description>
        <inlineHelpText>As a result of taking the customer satisfaction survey, this is the ranking from 10 to 1 (10 being extremely satisfied and 1 being least satisfied) on the customer&apos;s satisfaction with their Account Manager.</inlineHelpText>
        <label>Account Manager Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Dissatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Sat_Likelihood_to_Renew__c</fullName>
        <description>As a result of taking the customer satisfaction survey, this is the ranking from 10 to 1 (10 being extremely satisfied and 1 being least satisfied) on the likelihood to renew contract with Ryder.</description>
        <inlineHelpText>As a result of taking the customer satisfaction survey, this is the ranking from 10 to 1 (10 being extremely satisfied and 1 being least satisfied) on the likelihood to renew contract with Ryder.</inlineHelpText>
        <label>Likelihood to Renew</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Unlikely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlikely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Unlikely</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Sat_Maintenance_Satisfaction__c</fullName>
        <description>As a result of taking the customer satisfaction survey, this is the ranking from 10 to 1 (10 being extremely satisfied and 1 being least satisfied) on the customer&apos;s satisfaction with Ryder&apos;s Maintenance.</description>
        <inlineHelpText>As a result of taking the customer satisfaction survey, this is the ranking from 10 to 1 (10 being extremely satisfied and 1 being least satisfied) on the customer&apos;s satisfaction with Ryder&apos;s Maintenance.</inlineHelpText>
        <label>Maintenance Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Dissatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Sat_Overall_Satisfaction_FSL__c</fullName>
        <description>As a result of taking the customer satisfaction survey, this is the ranking from 10 to 1 (10 being extremely satisfied and 1 being least satisfied) on the overall FSL customer satisfaction with Ryder.</description>
        <inlineHelpText>As a result of taking the customer satisfaction survey, this is the ranking from 10 to 1 (10 being extremely satisfied and 1 being least satisfied) on the overall FSL customer satisfaction with Ryder.</inlineHelpText>
        <label>Overall Satisfaction - FSL</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Sat_Overall_Satisfaction_RPM__c</fullName>
        <description>As a result of taking the customer satisfaction survey, this is the ranking from 10 to 1 (10 being extremely satisfied and 1 being least satisfied) on the overall customer satisfaction with Ryder where the customer is an RPM business.</description>
        <inlineHelpText>As a result of taking the customer satisfaction survey, this is the ranking from 10 to 1 (10 being extremely satisfied and 1 being least satisfied) on the overall customer satisfaction with Ryder where the customer is an RPM business.</inlineHelpText>
        <label>Overall Satisfaction - RPM</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Sat_Shop_Communications__c</fullName>
        <description>As a result of taking the customer satisfaction survey, this is the ranking from 10 to 1 (10 being extremely satisfied and 1 being least satisfied) on the customer&apos;s satisfaction with Ryder&apos;s shop communications.</description>
        <inlineHelpText>As a result of taking the customer satisfaction survey, this is the ranking from 10 to 1 (10 being extremely satisfied and 1 being least satisfied) on the customer&apos;s satisfaction with Ryder&apos;s shop&apos;s communications.</inlineHelpText>
        <label>Maintenance Shop Communications</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t Know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Dissatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Sat_Willingness_to_Refer__c</fullName>
        <description>As a result of taking the customer satisfaction survey, this is the ranking from 10 to 1 (10 being extremely satisfied and 1 being least satisfied) on the customer&apos;s willingness to refer Ryder to colleagues.</description>
        <inlineHelpText>As a result of taking the customer satisfaction survey, this is the ranking from 10 to 1 (10 being extremely satisfied and 1 being least satisfied) on the customer&apos;s willingness to refer Ryder to colleagues.</inlineHelpText>
        <label>Willingness to Refer</label>
        <picklist>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Satisfaction_Survey__c</fullName>
        <description>Link to the customer satisfaction survey</description>
        <inlineHelpText>Link to the customer satisfaction survey</inlineHelpText>
        <label>Customer Satisfaction Survey</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Do_you_receive_approve_Ryder_invoices__c</fullName>
        <label>Do you receive/approve Ryder invoices?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t Know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_you_use_Ryder_Rental_vehicles__c</fullName>
        <label>Do you use Ryder rental vehicles?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ExternalSurveyId__c</fullName>
        <label>ExternalSurveyId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Survey_Response_Id__c</fullName>
        <label>External Survey Response Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Failed_Survey_Email_Date__c</fullName>
        <label>Failed Survey Email Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Failed_Survey_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Failed Survey Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Failed_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag is updated if any of the following criteria is met
Overall CSI Score =&lt; 70
MX Sat Score =&lt; 5</description>
        <label>Failed Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <description>Do you have any feedback as to how your problem was resolved by the Ryder Customer Care agent?</description>
        <label>Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_about_the_agent__c</fullName>
        <description>Do you have any feedback about the agent who handled your call?</description>
        <label>Feedback about the agent</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Feedback_as_to_why_the_issue_wasnt_solve__c</fullName>
        <description>Do you have any feedback as to how/why the issue was not solved to your satisfaction?</description>
        <label>Feedback as to why the issue wasnt solve</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Has_your_problem_been_resolved__c</fullName>
        <description>Has your problem or question been resolved to your satisfaction?</description>
        <label>Has your problem been resolved?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t Know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_can_Ryder_improve_Maint_Services__c</fullName>
        <label>How can Ryder improve Maint service?</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_can_Ryder_improve_the_services__c</fullName>
        <label>How can Ryder improve the services</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Increased_fleet_with_other_providers__c</fullName>
        <label>Increased fleet with other providers?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t Know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KeyContact_LocalAccountManager__c</fullName>
        <label>Key Contact Local Account Manager</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyContact_Other__c</fullName>
        <label>Key Contact Other</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyContact_ServiceManager__c</fullName>
        <label>Key Contact Service Manager</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_PDF_Emailed_BY_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last PDF Emailed BY User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Surveys_PDF_Emailed_For</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_PDF_Emailed_Date__c</fullName>
        <label>Last PDF Emailed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Liked_the_MOST_about_support_experience__c</fullName>
        <description>What, if anything, did you like MOST about your support experience?</description>
        <label>Liked the MOST about support experience</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Likelihood_of_calling_again__c</fullName>
        <description>How likely are you to call into Ryder Customer Care again?</description>
        <label>Likelihood of calling again</label>
        <picklist>
            <picklistValues>
                <fullName>Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlikely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Unlikely</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Likelihood_to_recommend__c</fullName>
        <label>Likelihood to recommend</label>
        <picklist>
            <picklistValues>
                <fullName>Very Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Unlikely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlikely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Unlikely</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maintenance_Contact_Frequency__c</fullName>
        <label>Maintenance Contact Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Before and after every PM/Maintenance event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maintenance_Contact_Preference__c</fullName>
        <label>Maintenance Contact Preference</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maintenance_Emergency_Road_Service__c</fullName>
        <label>Maintenance-Emergency Road Service</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Dissatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maintenance_Relation_with_shop_contact__c</fullName>
        <label>Maintenance- Relation with shop contact</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Dissatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maintenance_Repairs_In_time__c</fullName>
        <label>Maintenance-Repairs In time</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Dissatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maintenance_Truck_Washing__c</fullName>
        <label>Maintenance-Truck Washing</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Dissatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Maintenance_Vehicle_Repairs__c</fullName>
        <label>Maintenance-Vehicle Repairs</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Dissatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Areas_Of_Concern__c</fullName>
        <label>Other areas of concern</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Carriers__c</fullName>
        <label>What are the other carriers you use?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_experience__c</fullName>
        <description>Thinking of your overall experience with Customer Care regarding your call</description>
        <label>Overall experience</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_how_satisfied_are_you_with_the__c</fullName>
        <description>Overall, how satisfied are you with the agent who handled your call?</description>
        <label>How satisfied are you with the agent</label>
        <picklist>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overall_quality__c</fullName>
        <description>How would you rate the overall quality of Ryder&apos;s Customer Care in this case?</description>
        <label>Overall quality</label>
        <picklist>
            <picklistValues>
                <fullName>Excellent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfactory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PDF_Emailed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PDF Emailed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Reason_For_Choosing_Ryder__c</fullName>
        <label>Primary reason for choosing Ryder</label>
        <picklist>
            <picklistValues>
                <fullName>Improve vehicle uptime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryder capabilities / Experience / Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trust the Ryder name and reputation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network of faciltiies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing / cost was right</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPA/DOT Compliance / Regulatory Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wanted to get out of trucking business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management decision</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Problem_resolved__c</fullName>
        <description>Was your problem resolved on the first contact with a Ryder Customer Care agent?</description>
        <label>Problem resolved</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don&apos;t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_Behind_Renewal_Intent__c</fullName>
        <label>Reason Behind Renewal Intent</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reason_for_using_other_carriers__c</fullName>
        <label>Reason for using other carriers</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Role_in_DMP__c</fullName>
        <label>Role in DMP</label>
        <picklist>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>